# odgi-ffi

./: .gitmodules  CHANGELOG.md  Cargo.toml  README.md  build.rs  combined_file.txt
src/: conversion.rs  graph.rs  lib.rs  odgi.cpp  odgi_wrapper.hpp
test_data/: queries.gfa  tiny.gfa  tiny.odgi
tests/: conversion_test.rs  load_graph_test.rs  query_graph_test.rs
