[package]
name = "odgi-ffi"
version = "1.0.0"
authors = ["Milan Langhendries founder@caelrith.com"]
edition = "2024"
description = "A safe, ergonomic Rust wrapper for the odgi pangenome graph tool."
license = "MIT"
repository = "https://github.com/caelrith/odgi-ffi"
readme = "README.md"
keywords = ["odgi", "pangenome", "graph", "ffi", "bioinformatics"]
categories = ["science", "api-bindings", "external-ffi-bindings"]

# This is the final, surgical exclude list. It removes the true sources of
# package bloat while leaving the source code structure intact for the C++ build.
exclude = [
    # CRITICAL: Exclude all git version control data at any depth.
    # This is the primary source of the multi-megabyte package size.
    "**/.git",
    "**/.github",
    "**/.gitignore",
    "**/.gitmodules",

    # Exclude the large documentation folder identified by `du`.
    "vendor/odgi/docs/",
]

[lib]
name = "odgi_ffi"
crate-type = ["rlib"]

[dependencies]
cxx = "1.0"
tempfile = "3.3.0"

[build-dependencies]
cxx-build = "1.0"
cmake = "0.1"
fs_extra = "1.3.0"

[dev-dependencies]

