[package]
name = "odgi-ffi"
version = "1.0.0"
authors = ["Milan Langhendries founder@caelrith.com"]
edition = "2024"
description = "A safe, ergonomic Rust wrapper for the odgi pangenome graph tool."
license = "MIT"
repository = "https://github.com/caelrith/odgi-ffi"
readme = "README.md"
keywords = ["odgi", "pangenome", "graph", "ffi", "bioinformatics"]
categories = ["science", "api-bindings", "external-ffi-bindings"]

# This is the final, data-driven exclude list. It surgically removes the
# large non-source-code files that your `find` command identified.
exclude = [
    # General good practice: remove all git data in case it exists anywhere.
    "**/.git",
    "**/.github",
    "**/.gitignore",
    "**/.gitmodules",

    # CRITICAL: Exclude files by extension based on your investigation.
    # This removes the multi-megabyte test data and benchmark results
    # without removing the directories, which would break the C++ build.
    "**/*.7z",
    "**/results/*.txt",
    "**/data/*.gfa",
    "vendor/odgi/test/*.gfa",

    # Exclude documentation, which is not needed for the build.
    "vendor/odgi/docs/",
]


[lib]
name = "odgi_ffi"
crate-type = ["rlib"]

[dependencies]
cxx = "1.0"
tempfile = "3.3.0"

[build-dependencies]
cxx-build = "1.0"
cmake = "0.1"
fs_extra = "1.3.0"

[dev-dependencies]

