[package]
name = "odgi-ffi"
version = "1.1.1"
authors = ["Milan Langhendries founder@caelrith.com"]
edition = "2024"
description = "A safe, ergonomic Rust wrapper for the odgi pangenome graph tool."
license = "MIT"
repository = "https://github.com/caelrith/odgi-ffi"
readme = "README.md"
keywords = ["odgi", "pangenome", "graph", "ffi", "bioinformatics"]
categories = ["science", "api-bindings", "external-ffi-bindings"]

# This exclude list is necessary to keep the crate size manageable for publishing.
exclude = [
    "**/.git",
    "**/.github",
    "**/.gitignore",
    "**/.gitmodules",
    "**/*.7z",
    "**/results/*.txt",
    "**/data/*.gfa",
    "vendor/odgi/test/*.gfa",
    "vendor/odgi/docs/",
]

[lib]
name = "odgi_ffi"
crate-type = ["rlib"]

[dependencies]
cxx = "1.0"
tempfile = "3.3.0"

[build-dependencies]
cxx-build = "1.0"
cmake = "0.1"
fs_extra = "1.3.0"

[dev-dependencies]

# --- Configuration for docs.rs build ---

[features]
# This feature disables the C++ build for documentation purposes.
docs-only = []

[package.metadata.docs.rs]
# Tell docs.rs to build with ONLY our special feature, which skips the C++ compilation.
features = ["docs-only"]